2002-12-12  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-applicable-views.c:
	* src/nautilus-applicable-views.h:
	Add NAUTILUS_DETERMINE_VIEW_NO_MASTER_BROWSER result.

	* src/nautilus-window-manage-views.c:
	Give nice error message when there is no master browser.

	Note: This change requires gnome-vfs cvs after the 2.1.4 release.
	
2002-12-09  James Willcox  <jwillcox@gnome.org>

	* libnautilus-private/nautilus-icon-factory.c:
	(destroy_icon_factory), (get_icon_factory),
	(show_thumbnails_changed_callback), (should_show_thumbnail),
	(nautilus_icon_factory_get_icon_for_file):

	Respond properly to prefs regarding when to show thumbnails.
	Fixes #96644.

2002-12-09  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_self_check_file):
	Fix test

=== nautilus 2.1.4 ===

2002-12-09  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update

	* configure.in:
	Require eel 2.1.4, bump version to 2.1.4

2002-12-07  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-container.c 
	(lay_down_icons_horizontal): Removed unnecessary assigment.
	Fixes #98543. Patch from Gediminas Paulauskas <menesis@delfi.lt>

2002-12-04  James Willcox  <jwillcox@gnome.org>

	* libnautilus-private/nautilus-icon-factory.c:
	(icon_theme_changed_callback), (nautilus_icon_factory_clear):

	Clear the cache when the icon theme changes so we get the new icons.

2002-12-05  Glynn Foster  <glynn.foster@sun.com>

	* libnautilus/nautilus-clipboard-ui.xml: Add missing mnemonics.

2002-12-04  James Willcox  <jwillcox@gnome.org>

	* src/nautilus-window.c: (nautilus_window_instance_init):

	Disconnect "icons_changed" handler from the icon factory when the
	window is closed.  Fixes #98038.

2002-12-04  James Willcox  <jwillcox@gnome.org>

	* components/emblem/nautilus-emblem-view.c:
	(nautilus_emblem_view_drag_received_cb):

	Fixed a silly double negation in an error string.  (Fixes #100376)

2002-12-04  Dave Camp  <dave@ximian.com>
